# faster-outlines

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  build-wheels.sh  pyproject.toml  setup.py
bench/: benchmark_results.json  makePrettyGraph.js  package.json  test_fsm_comp_time.py  test_throughput.py  test_vocab_serde.py  vllm_bench.py
ci/: build-wheels.sh
examples/: example.py  test.py
faster_outlines/: __init__.py  patch.py  sampling.py
faster_outlines/fsm/: __init__.py  fsm_utils.pyi  guide.py  regex.py  tokenizer_fsm_patch.py  utils.py  vllm_guide.py
faster_outlines/fsm/fsm_utils/src/: caching.rs  environment.rs  lazy_index.rs  lib.rs  tokenizer_index.rs  types.rs
rust/faster_outlines_rs/: Cargo.toml
rust/faster_outlines_rs/src/: atomic_wait.rs  bindings.rs  environment.rs  lazy_index.rs  lib.rs  sp_decode.rs  tokenizer_index.rs  types.rs  vocab.rs
rust/faster_outlines_rs/src/caching/: caching.rs  hashing.rs  mod.rs
rust/fsm_utils/: Cargo.toml
rust/fsm_utils/src/: atomic_wait.rs  bindings.rs  environment.rs  lazy_index.rs  lib.rs  sp_decode.rs  tokenizer_index.rs  types.rs  vocab.rs
rust/fsm_utils/src/caching/: caching.rs  hashing.rs  mod.rs  zmq_service.rs
tests/: test_fsm.py  test_fsm_comp_time.py  test_guide.py  test_jsonschema.py  test_random_walk_matches.py
