[package]
name = "faster_outlines"  ## this will be the submodule name
version = "07.11.2024"
edition = "2021"



[lib]
crate-type = ["cdylib"]
path = "faster_outlines/fsm/fsm_utils/src/lib.rs"


# Dependencies for this specific package
[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
rayon = "1.10.0"
mimalloc = "0.1.41"
dashmap = { version = "5.5.3", features = ["inline"] }
once_cell = "1.19.0"
lru = "0.12.3"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# make sure to strip any debug info from binary
# this way it loads to python faster!
strip = true
panic = 'abort'


[features]
default = []
e2e_experimental = []
