[package]
name = "faster_outlines"  ## this will be the submodule name
version = "0.1.2"
edition = "2021"



[lib]
crate-type = ["cdylib"]
path = "faster_outlines/fsm/fsm_utils/src/lib.rs"


# Dependencies for this specific package
[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
rayon = "1.10.0"
once_cell = "1.19.0"
lru = "0.12.3"
rustc-hash = "2.0.0"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# make sure to strip any debug info from binary
# this way it loads to python faster!
strip = true
panic = 'abort'


[features]
default = []
e2e_experimental = []
