[tool.poetry]
name = "faster_outlines"
packages = [
    { include = "faster_outlines" },
]
version = "07.11.2024"
description = "Make The `Outlines` Library FASTER!"
authors = ["Nathan Hoos <thwackyy.y@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"


classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.2"
numpy = "1.26.4"
interegular = "0.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.7.0"
setuptools-rust = "^1.9.0"

[build-system]
requires = ["setuptools>=69.5.1", "wheel", "setuptools-rust>=1.9.0", "tomlkit>=0.12.5"]
build-backend = "setuptools.build_meta"


[lib]
name = "fsm_utils" 
crate-type = ["cdylib"]  
