[project]
name = "faster_outlines"
version = "2024.11.10"
description = "Faster, lazy backend for the `Outlines` library"
authors = [
{ name = "Nathan Hoos" }
]
license = { text =  "Apache 2.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "torch",
    "interegular"
]
requires-python = '>=3.10'

[project.optional-dependencies]
dev = [
    "setuptools-rust>1.9.0"
]

[build-system]
requires = ["setuptools>=69.5.1", "wheel", "setuptools-rust>=1.9.0"]
build-backend = "setuptools.build_meta"

[lib]
name = "lib" 
crate-type = ["cdylib"]  
