[package]
name = "faster_outlines_rs"  
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
once_cell = "1.19.0"
lru = "0.12.3"
rustc-hash = "2.0.0"
anyhow = "1.0.89"
libc = "0.2.161"

serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", features = ["preserve_order"], optional = true }
zmq = { version = "0.10.0", optional = true }
pyo3 = { version = "0.22.0", features = ["extension-module", "anyhow"], optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[features]
default = []
e2e_experimental = []
python_bindings = ["pyo3", "serde", "serde_json", "zmq"]
