[package]
name = "faster_outlines_rs"  
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
once_cell = "1.19.0"
lru = "0.12.3"
rustc-hash = "2.0.0"
anyhow = "1.0.89"
libc = "0.2.161"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"]}
pyo3 = { version = "0.22.0", features = ["extension-module", "anyhow"], optional = true }
fixedbitset = "0.5.7"
regex = "1.11.1"
smallvec = {version = "1.13.2", features = ['serde']}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[features]
default = []
e2e_experimental = []
python_bindings = ["pyo3"]
